--- a/prueba-tecnica-front/src/app/deteccion-plagas/components/menu-horizontal/menu-horizontal.component.html
+++ b/prueba-tecnica-front/src/app/deteccion-plagas/components/menu-horizontal/menu-horizontal.component.html
@@ -19,6 +19,7 @@
             padding-left: 10px;
             border: 0;
           "
+          (click)="clickme('plaga')"
         >
           Plagas
           <i
@@ -37,8 +38,9 @@
             padding-left: 10px;
             border: 0;
           "
+          (click)="clickme('cultivo')"
         >
-          Cultivos
+          Cultivo
           <i
             class="fa fa-chevron-right"
             aria-hidden="true"
@@ -55,6 +57,7 @@
             padding-left: 10px;
             border: 0;
           "
+          (click)="clickme('palma')"
         >
           Palmas
           <i
