Cultivos, estadisticas y organizacion

--- a/prueba-tecnica-front/src/app/deteccion-plagas/deteccion-plagas.component.html
+++ b/prueba-tecnica-front/src/app/deteccion-plagas/deteccion-plagas.component.html
@@ -7,4 +7,8 @@
     *ngIf="informacionComp == 'plaga' || informacionComp == undefined"
     [subCategories]="informacionMenuVertical"
   ></app-content-plagas>
+  <app-content-zona
+    *ngIf="informacionComp == 'cultivo'"
+    [subCategories]="informacionMenuVertical"
+  ></app-content-zona>
 </div>
