organizacion de fotos, creacion de las palmeras

--- a/prueba-tecnica-front/src/app/deteccion-plagas/components/content-plagas/content-plagas.component.html
+++ b/prueba-tecnica-front/src/app/deteccion-plagas/components/content-plagas/content-plagas.component.html
@@ -38,10 +38,7 @@
                       *ngFor="let item of informacion"
                     >
                       <div class="card mb-4">
-                        <img
-                          class="card-img-top"
-                          src="assets/img/elements/cc1.jpg"
-                        />
+                        <img class="card-img-top" src="assets/img/plaga.png" />
 
                         <div class="card-body">
                           <h5 class="card-title text-primary">
