--- a/prueba-tecnica-front/src/app/deteccion-plagas/components/content-zona/content-zona.component.html
+++ b/prueba-tecnica-front/src/app/deteccion-plagas/components/content-zona/content-zona.component.html
@@ -51,7 +51,7 @@
                       <div class="card mb-4">
                         <img
                           class="card-img-top"
-                          src="assets/img/elements/cc1.jpg"
+                          src="assets/img/cultivo.jpg"
                         />
 
                         <div class="card-body">
