--- a/prueba-tecnica-front/src/app/deteccion-plagas/deteccion-plagas.component.html
+++ b/prueba-tecnica-front/src/app/deteccion-plagas/deteccion-plagas.component.html
@@ -11,4 +11,8 @@
     *ngIf="informacionComp == 'cultivo'"
     [subCategories]="informacionMenuVertical"
   ></app-content-zona>
+  <app-content-palma
+    *ngIf="informacionComp == 'palma'"
+    [subCategories]="informacionMenuVertical"
+  ></app-content-palma>
 </div>
