--- a/prueba-tecnica-front/src/app/deteccion-plagas/components/content-zona/content-zona.component.html
+++ b/prueba-tecnica-front/src/app/deteccion-plagas/components/content-zona/content-zona.component.html
@@ -1,4 +1,8 @@
-<div class="content-wrapper">
+<div
+  style="width: 100%; height: 100vh; background-color: red"
+  *ngIf="estado == true"
+></div>
+<div class="content-wrapper" *ngIf="estado != true">
   <div class="content">
     <div class="col-lg-19">
       <div class="card card-default">
@@ -46,7 +50,7 @@
                   <div class="row">
                     <div
                       class="col-md-10 col-xl-6"
-                      *ngFor="let item of informacion"
+                      *ngFor="let item of cultivo"
                     >
                       <div class="card mb-4">
                         <img
