creacion de loader para la espera de la informacion

--- a/prueba-tecnica-front/src/app/deteccion-plagas/components/content-zona/content-zona.component.html
+++ b/prueba-tecnica-front/src/app/deteccion-plagas/components/content-zona/content-zona.component.html
@@ -1,7 +1,6 @@
-<div
-  style="width: 100%; height: 100vh; background-color: red"
-  *ngIf="estado == true"
-></div>
+<div class="loader" *ngIf="estado == true">
+  <img src="../../assets/img/loadeer.gif" style="width: 50px; height: 50px" />
+</div>
 <div class="content-wrapper" *ngIf="estado != true">
   <div class="content">
     <div class="col-lg-19">
@@ -21,16 +20,7 @@
             poco fertiles, ademas de la permanete presencia del agua salada.
             Asimismo, esta planta junto con su fruto (el coco) es uno de los
             elementos más representativos de la cultura nativa en las costas de
-            casi todas las playas del mundo; se puede afirmar que prácticamente
-            todos los paisajes tropicales del planeta están asociados a su
-            presencia de la misma manera que la arena o el mar. Es de resaltar
-            que el cocotero también ha sido denominado "el árbol de la vida" por
-            sus múltiples usos. Entorno a esta planta se ha desarrollado una
-            cultura muy interesante, principalmente impulsada por su fruto único
-            y exótico, del cual se pueden obtener numerosos productos como
-            aceite, pulpa y agua rica en electrolitos. Sin mencionar todas las
-            artesanías que se puede desarrollar con su concha o cascacara, que
-            puede servir incluso para la obtención de biocombustible.
+            casi todas las playas del mundo.
           </p>
           <div class="tab-content" id="myTabContent1">
             <div
