--- a/prueba-tecnica-front/src/app/deteccion-plagas/components/content-palma/content-palma.component.html
+++ b/prueba-tecnica-front/src/app/deteccion-plagas/components/content-palma/content-palma.component.html
@@ -1,7 +1,6 @@
-<div
-  style="width: 100%; height: 100vh; background-color: red"
-  *ngIf="estado == true"
-></div>
+<div class="loader" *ngIf="estado == true">
+  <img src="../../assets/img/loadeer.gif" style="width: 50px; height: 50px" />
+</div>
 <div class="content-wrapper" *ngIf="estado != true">
   <div class="content">
     <div class="col-lg-19">
